--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Minorities and Philosophy at UCSB
+email: adunn@umail.ucsb.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Minorities and Philosophy aims to examine and address issues of minority
+  participation in academic philosophy.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "map-ucsb.github.io" # the base hostname & protocol for your site
+timezone: America/Los_Angeles
+encoding: utf-8
+
+permalink: /:title
 
 # Build settings
 markdown: kramdown
